@@ -1,3 +1,9 @@
+2008-10-09  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_jpeg.c: Add #ifdefs for changes needed if using
+	IPP enabled version of libjpeg from Intel. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=1951
+
 2008-09-05  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* tools/tiffsplit.c: Use byte counts of proper size (uint64).
